--- a/app/pug/pages/employee-settings/services/_index.pug
+++ b/app/pug/pages/employee-settings/services/_index.pug
@@ -69,3 +69,8 @@ include /partials/lang-pairs-list
       +button({border:'surfie-green'})(type="button")
         span Service
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10', classes:'button__icon'})
+
+.catalog__content-wrap.mt-40
+  .row.justify-content-center
+    .col-12.col-xxl-10
+      include ./create-service
