--- a/app/pug/settings-page.pug
+++ b/app/pug/settings-page.pug
@@ -7,6 +7,7 @@ include /partials/edit-avatar-modal
 
 block variables
   - const title = 'Settings page'
+  - const page = 'settings'
   -
     const tabs = [
       {title:'General', name:'general', isActive:true},
