--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -87,3 +87,4 @@
 @import ./components/massive-actions-dropdown
 @import ./components/invite-employee-dropdown
 @import ./components/preffered-list
+@import ./components/create-service
