--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -36,13 +36,15 @@
                 div(class="col-12 col-md-4 mb-10 mb-md-0")
                   +translation-select()
                 .col-12.col-md-8
-                  .input-group
-                    .input-group__prepend
+                  .row-group.row-group--align-center.row-group--sm
+                    .row-group__item
                       p Your prefered price per <span class="font-bold">1 word</span>
-                    .input-group__input
-                      +input({bg:'alabaster'})(type="number" placeholder="0.00")
-                    .input-group__append.input-group__append--p-0
-                      +currency-select()
+                    .row-group__item.row-group__item--flex-1
+                      .row-group.row-group--nowrap.row-group--0
+                        .row-group__item.row-group__item--flex-1
+                          +input({bg:'alabaster'})(type="number" placeholder="0.00" style="min-width:70px")
+                        .row-group__item
+                          +currency-select()
 
     .application-form__card-line
       +button({border:'surfie-green'})(type="button")
