--- a/app/pug/pages/application-page/step-1/card-6.pug
+++ b/app/pug/pages/application-page/step-1/card-6.pug
@@ -23,13 +23,11 @@
           .form-group
             .form-group__header
               p Your prefered price per <span class="font-bold">1 word</span>
-            .row
-              div(class="col-12 col-lg-8")
-                .input-group
-                  .input-group__input
-                    +input({bg:'alabaster'})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +currency-select()
+            .row-group.row-group--align-center.row-group--0
+              .row-group__item
+                +input({bg:'alabaster'})(type="number" placeholder="0.00" style="min-width:70px")
+              .row-group__item
+                +currency-select()
 
     .application-form__card-line
       +button({border:'surfie-green'})(type="button")
