--- a/app/pug/pages/application-page/step-1/card-7.pug
+++ b/app/pug/pages/application-page/step-1/card-7.pug
@@ -23,13 +23,11 @@
           .form-group
             .form-group__header
               p Your prefered price per <span class="font-bold">1 word</span>
-            .row
-              div(class="col-12 col-lg-8")
-                .input-group
-                  .input-group__input
-                    +input({bg:'alabaster'})(type="number" placeholder="0.00")
-                  .input-group__append.input-group__append--p-0
-                    +currency-select()
+            .row-group.row-group--align-center.row-group--0
+              .row-group__item
+                +input({bg:'alabaster'})(type="number" placeholder="0.00" style="min-width:70px")
+              .row-group__item
+                +currency-select()
 
     .application-form__card-line
       +button({border:'surfie-green'})(type="button")
@@ -40,12 +38,12 @@
       .form-group
         .form-group__header
           +checkbox({ label:'Additional (custom) services:', checked:true })
-        .row
-          div(class="col-12 col-md-6")
-            .input-group
-              .input-group__prepend
-                p Your price per <span class="font-bold">1 hr</span>
-              .input-group__input
-                +input({bg:'alabaster'})(type="number" placeholder="0.00")
-              .input-group__append.input-group__append--p-0
+        .row-group.row-group--align-center.row-group--sm
+          .row-group__item
+            p Your price per <span class="font-bold">1 hr</span>
+          .row-group__item.row-group__item--flex-1
+            .row-group.row-group--nowrap.row-group--0
+              .row-group__item.row-group__item--flex-1
+                +input({bg:'alabaster'})(type="number" placeholder="0.00" style="min-width:70px")
+              .row-group__item
                 +currency-select()
