--- a/app/sass/components/input-group.sass
+++ b/app/sass/components/input-group.sass
@@ -3,30 +3,23 @@
   display: flex
   width: 100%
   max-width: 100%
-  &--absolute
-    .input-group__input
-      &:not(:last-child)
-        padding-right: 35px
-      &:not(:first-child)
-        padding-left: 35px
   // Elements
-  &__prepend
-    display: flex
-    align-items: center
-    padding-right: 10px
+  &__prepend,
   &__append
-    display: flex
-    align-items: center
-    padding-left: 10px
-    &--p-0
-      padding-left: 0
-  &__append-absolute
     position: absolute
-    height: 100%
-    right: 0
     top: 0
-    padding: 0 15px
+    height: 100%
     display: flex
     align-items: center
+  &__prepend
+    left: 0
+    padding-left: 15px
+  &__append
+    right: 0
+    padding-right: 15px
   &__input
     flex: 1
+    &:first-child
+      padding-right: 35px
+    &:last-child
+      padding-left: 35px
