--- a/app/sass/components/row-group.sass
+++ b/app/sass/components/row-group.sass
@@ -11,6 +11,8 @@
   &--flex-1
     .row-group__item
       flex: 1
+  &--w100
+    width: 100%
   &--md
     >.row-group__item
       &:not(:last-child)
@@ -23,8 +25,14 @@
     >.row-group__item
       &:not(:last-child)
         margin-right: 5px
+  &--0
+    >.row-group__item
+      &:not(:last-child)
+        margin-right: 0
   // Elements
   &__item
     flex-shrink: 0
     &:not(:last-child)
       margin-right: 20px
+    &--flex-1
+      flex: 1
