--- a/app/pug/pages/employee-settings/general.pug
+++ b/app/pug/pages/employee-settings/general.pug
@@ -78,4 +78,4 @@ include /partials/chip
         div(data-simplebar class="custom-scroll preffered-list__scroll")
           each num in [1,2,3,4,5,6,7,8,9,10]
             .preffered-list__item
-              +chip({title:`UAB “Client ${num}”`, close:true, button:true})
+              +chip({title:`UAB “Client ${num}”`, close:true, border:'silver-chalice'})
