--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -1,6 +1,5 @@
 include /partials/input
 include /partials/button
-include /partials/skill-checkbox
 
 mixin skills-dropdown(props = {})
 
@@ -12,11 +11,11 @@ mixin skills-dropdown(props = {})
       .skills-dropdown__header
         p.font-semibold Skills
         p.font-semibold.text-silver-chalice 5234 skills
-      form.form.skills-dropdown__search
+      .skills-dropdown__search
         .skills-dropdown__search-input
-          .input-group.input-group--absolute
+          .input-group
             +input({border:'alto', classes:'input-group__input'})(type="text")
-            .input-group__append-absolute
+            .input-group__append
               +icon({name:'search', fill:'silver-chalice', width:'12', height:'12'})
         +button({bg:'white', shadow:true})(type="button")| Confirm
       .skills-dropdown__variants
@@ -26,4 +25,4 @@ mixin skills-dropdown(props = {})
           .column-group.column-group--sm
             each item in ['Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop', 'Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop']
               .column-group__item
-                +skill-checkbox({title:item})
+                +input({border:'alto', disabled:true})(value=item)
