--- a/app/sass/components/chip.sass
+++ b/app/sass/components/chip.sass
@@ -7,8 +7,9 @@
   font-weight: 600
   color: $c-tundora
   user-select: none
+  border-radius: $r-primary
+  border: 1px solid transparent
   &__title
     margin-right: 10px
-  &--button
-    border: 1px solid $c-silver-chalice
-    border-radius: $r-primary
+  &--border-silver-chalice
+    border-color: $c-silver-chalice
