--- a/app/sass/components/create-service.sass
+++ b/app/sass/components/create-service.sass
@@ -1,5 +1,7 @@
 .create-service
   border: 1px solid $c-alto
   padding: 30px
+  +media-max($bp-sm)
+    padding: 30px 15px
   &__title
     margin-bottom: 20px
