--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -88,3 +88,4 @@
 @import ./components/invite-employee-dropdown
 @import ./components/preffered-list
 @import ./components/create-service
+@import ./components/create-skills-dropdown
