skills-dropdown was refactored

--- a/app/sass/components/skills-dropdown.sass
+++ b/app/sass/components/skills-dropdown.sass
@@ -13,14 +13,9 @@
     justify-content: space-between
     margin-bottom: 20px
   &__search
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
     margin-bottom: 20px
-    &-input
-      flex: 1
-      margin-right: 15px
   &__variants
+    margin-bottom: 15px
     &-title
       margin-bottom: 10px
     &-container
