--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -12,12 +12,10 @@ mixin skills-dropdown(props = {})
         p.font-semibold Skills
         p.font-semibold.text-silver-chalice 5234 skills
       .skills-dropdown__search
-        .skills-dropdown__search-input
-          .input-group
-            +input({border:'alto', classes:'input-group__input'})(type="text")
-            .input-group__append
-              +icon({name:'search', fill:'silver-chalice', width:'12', height:'12'})
-        +button({bg:'white', shadow:true})(type="button")| Confirm
+        .input-group
+          +input({border:'alto', classes:'input-group__input'})(type="text")
+          .input-group__append
+            +icon({name:'search', fill:'silver-chalice', width:'12', height:'12'})
       .skills-dropdown__variants
         .skills-dropdown__variants-title
           h5 Chose skill from the list and confirm
@@ -26,3 +24,5 @@ mixin skills-dropdown(props = {})
             each item in ['Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop', 'Aobe acrobat', 'Iliustrator', 'Trados', 'Localise', 'Photoshop']
               .column-group__item
                 +input({border:'alto', disabled:true})(value=item)
+      .skills-dropdown__footer
+        +button({border:'surfie-green', shadow:true})(type="button")| Confirm
