--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -4103,22 +4103,11 @@ p,
 }
 
 .skills-dropdown__search {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   margin-bottom: 20px;
 }
 
-.skills-dropdown__search-input {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  margin-right: 15px;
+.skills-dropdown__variants {
+  margin-bottom: 15px;
 }
 
 .skills-dropdown__variants-title {
