--- a/app/pug/pages/employee-settings/education.pug
+++ b/app/pug/pages/employee-settings/education.pug
@@ -2,17 +2,18 @@ include /partials/avatar
 include /partials/button
 include /partials/upload-documents
 include /partials/link
-include /partials/create-skills-dropdown
+include /partials/manage-skills-dropdown
 include /partials/chip
+include /partials/close
 -
   var list1 = [
-    {left:'#1:', right:'', leftAccent:true},
+    {left:'#1:', right:'', leftAccent:true, close:true},
     {left:'Diploma type:', right:'Magister'},
     {left:'Diploma category:', right:'Translation & Interpreting'},
   ]
 -
   var list2 = [
-    {left:'#2:', right:'', leftAccent:true},
+    {left:'#2:', right:'', leftAccent:true, close:true},
     {left:'Diploma type:', right:'Magister'},
     {left:'Diploma category:', right:'Translation & Interpreting'},
   ]
@@ -29,7 +30,14 @@ include /partials/chip
             each item in list1
               .info-list__item
                 .info-list__left
-                  p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
+                  if(item.close)
+                    .row-group.row-group--sm.row-group--align-center
+                      .row-group__item
+                        p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
+                      .row-group__item
+                        +close({color:'brick-red', size:'10'})
+                  else
+                    p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
                 .info-list__right
                   p.p-sm.font-semibold #{item.right}
         .column-group__item
@@ -38,7 +46,14 @@ include /partials/chip
               each item in list2
                 .info-list__item
                   .info-list__left
-                    p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
+                    if(item.close)
+                      .row-group.row-group--sm.row-group--align-center
+                        .row-group__item
+                          p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
+                        .row-group__item
+                          +close({color:'brick-red', size:'10'})
+                    else
+                      p(class=`p-sm font-semibold ${item.leftAccent ? 'text-surfie-green' : 'text-silver-chalice'}`) #{item.left}
                   .info-list__right
                     p.p-sm.font-semibold #{item.right}
     //- Column
@@ -50,7 +65,11 @@ include /partials/chip
           .info-list__left
             p.p-sm.font-semibold.text-silver-chalice Issuing invoice:
           .info-list__right
-            p.p-sm.font-semibold.text-surfie-green IVP
+            .row-group.row-group--sm.row-group--align-center
+              .row-group__item
+                p.p-sm.font-semibold.text-surfie-green IVP
+              .row-group__item
+                +close({color:'brick-red', size:'10'})
     //- Column
     div(class="col-12 col-md-6 col-xl-3 col-xxl-2 mb-40")
       .column-heading
@@ -58,7 +77,7 @@ include /partials/chip
           .row-group__item
             h5 Skills:
           .row-group__item
-            +create-skills-dropdown()
+            +manage-skills-dropdown()
       .preffered-list
         div(data-simplebar class="custom-scroll preffered-list__scroll")
           each expertise in ['Adobe Acrobat Pro', 'Illustrator', 'Trados']
@@ -71,7 +90,7 @@ include /partials/chip
           .row-group__item
             h5 Expertise:
           .row-group__item
-            //- +create-skills-dropdown()
+            +manage-skills-dropdown()
       .preffered-list
         div(data-simplebar class="custom-scroll preffered-list__scroll")
           each expertise in ['Technical', 'Legal', 'Medical']
