--- a/app/pug/partials/skills-dropdown.pug
+++ b/app/pug/partials/skills-dropdown.pug
@@ -4,8 +4,8 @@ include /partials/skill-checkbox
 
 mixin skills-dropdown(props = {})
 
-  .dropdown.js-dropdown.skills-dropdown(data-dropdown="skills")
-    .dropdown__toggle.skills-dropdown__toggle(data-dropdown-toggle="skills")
+  .dropdown.js-dropdown.skills-dropdown(data-dropdown="skills-dropdown")
+    .dropdown__toggle.skills-dropdown__toggle(data-dropdown-toggle="skills-dropdown")
       +button({border:'surfie-green', size:'20'})(type="button")
         +icon({name:'plus', fill:'surfie-green', width:'10', height:'10'})
     .dropdown__body.skills-dropdown__body
