employees tab was switched to default

--- a/app/pug/employee-settings.pug
+++ b/app/pug/employee-settings.pug
@@ -39,9 +39,9 @@ block content
                     .catalog__tab-title #{tab.title}
             .catalog__box
               .catalog__content
-                .catalog__content-item.tabs__content.js-tabs-content(data-content="general")
+                .catalog__content-item.tabs__content.js-tabs-content.is-active(data-content="general")
                   include /pages/employee-settings/general
-                .catalog__content-item.tabs__content.js-tab-content.is-active(data-content="education")
+                .catalog__content-item.tabs__content.js-tab-content(data-content="education")
                   include /pages/employee-settings/education
                 .catalog__content-item.tabs__content.js-tab-content(data-content="services")
                   include /pages/employee-settings/services/_index
